--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie-player": "^2.1.0",
     "react-redux": "^9.2.0",
     "react-swipeable": "^7.0.2"
   },
